Add endpoint for 'managing' photos
